--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.35.0",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
+    "node-domexception": "^2.0.2",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
     "jiti": "^2.6.1",
+    "supabase": "^2.48.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.46.0"
