--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroui/react": "^2.8.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "2.74.0",
     "@tabler/icons-react": "^3.35.0",
     "framer-motion": "^12.23.22",
