Se ha utilizado el comando:
pnpx supabase gen types typescript --project-id [ID DEL PROYECTO] > .\src\app\types\database.ts

Para crear el tipo de datos de la base de datos junto a un archivo ".ts"

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "gen:types": "pnpx supabase gen types typescript --project-id qrasrddwiwvydyspxfyt > ./src/app/types/database.ts"
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
